# omnitoken

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  assets.go  benchmark_test.go  bpe.go  bpe_ranks.go  bpe_runtime.go  bpe_test.go  cache.go  cache_example_test.go  cache_test.go  doc.go  engine.go  example_test.go  go.mod  go.work  go.work.sum  omnitoken.go  openai_parity_test.go  options.go  parity_corpus_test.go  registry.go  registry_test.go  scanner.go  sentencepiece.go  sentencepiece_test.go  special_test.go  special_tokens.go  unsafe_bytes.go  wordpiece.go  wordpiece_test.go
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  cache_cost_idea.yml  config.yml  feature_request.yml  performance_report.yml  tokenizer_parity.yml
.github/workflows/: adapters.yml  ci.yml
adapters/: README.md  parity.md
adapters/anthropic/: README.md  anthropic.go  anthropic_test.go  go.mod
adapters/gemini/: README.md  accounting.go  accounting_test.go  benchmark_test.go  gemini.go  gemini_test.go  go.mod  parity_test.go
adapters/huggingface/: README.md  benchmark_test.go  go.mod  huggingface.go  huggingface_test.go  parity_test.go
benchmarks/: README.md
benchmarks/openai_rust/: Cargo.toml
benchmarks/openai_rust/src/: main.rs
cacheflow/: README.md  align.go  align_test.go  breakers.go  example_test.go  simulate.go  simulate_test.go
cmd/omni/: main.go
docs/: architecture.md  benchmarks.md  cache.md  cli.md  project-structure.md
tools/: openai_parity_digest.py  openai_reference_benchmark.py
(+48 files in other folders)
