[package]
name = "omnitoken-openai-rust-bench"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
base64 = "0.22"
hex = "0.4"
sha2 = "0.10"
tiktoken = { git = "https://github.com/openai/tiktoken.git", rev = "08a5f3b2c987ada4fc5aa1f16c643c203fa8acaa", default-features = false }
